# trlogic

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  image.json  index.html
docker/: Dockerfile
src/: main.rs
